--- a/src/css/projects.less
+++ b/src/css/projects.less
@@ -131,12 +131,13 @@
   //     height: 90%;
   // }
   .modalBody { 
-    height: 600px;
+    height: 80%;
   }
   .closeRow {
     position: relative;
     margin-top: 1rem;
     margin-bottom: 1rem;
+    height: 20%;
     right: 0;
     left: 0;
     bottom: 0;
